--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,187 @@
-.App {
-  text-align: center;
+nav {
+  padding: 0 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content {
+  min-height: calc(100vh - 70px - 64px);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.goods {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 1rem;
+  gap: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
   display: flex;
   flex-direction: column;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 12px !important;
+  flex-grow: 1;
+}
+
+.cart {
+  cursor: pointer;
+  position: fixed;
+  margin-top: 10px;
+  bottom: 2rem;
+  right: 2rem;
+  padding: 1rem;
+  z-index: 5;
+}
+
+.cart-quantity {
+  font-size: 12px;
+}
+
+.modal-shop {
+  display: flex;
+  position: fixed;
+  
+  width: 100vw;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .4);
+  
+  z-index: 10;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s;
 }
 
-.App-link {
-  color: #61dafb;
+.modal-shop.open {
+  pointer-events: all;
+  opacity: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.modal-shop.close {
+  pointer-events: all;
+  opacity: 1;
+}
+
+.modal-shop.open .collection {
+  animation: slideDown .5s ease-in-out;
+}
+
+.modal-shop.close .collection {
+  animation: slideDownOut .55s ease-in-out;
+}
+
+.collection {
+  min-width: 600px;
+  max-width: 50rem;
+}
+
+.collection-item.delete {
+  animation: fadeOutScale 0.4s ease-in-out;
+}
+
+.collection-item:first-child {
+  padding-right: 5px;
+}
+
+.secondary-content {
+  cursor: pointer;
+}
+
+.basket-quantity {
+  cursor: pointer;
+  vertical-align: middle;
+  user-select: none;
+}
+
+.toast-block {
+  position: fixed;
+  width: 100%;
+  top: 30px;
+  right: 1rem;
+}
+
+.toast-wrapper {
+  position: relative;
+}
+
+#toast-container {
+  position: absolute;
+  text-align: center;
+  transition: top 0.2s ease-in-out;
+  animation: toast 0.25s ease-in-out;
+}
+
+#toast-container.close {
+  animation: toastOut 0.25s ease-in-out forwards;
+}
+
+.card-rarity {
+  margin-left: auto;
+  margin-top: auto;
+  color: #fff;
+}
+
+@media only screen and (min-width: 601px) and (max-width: 992px) {
+  #toast-container {
+    left: auto;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (min-width: 767px) {
+  .cart {
+    top: 4rem;
+    bottom: unset;
   }
+}
+
+@media (max-width: 767px) {
+  #toast-container {
+    min-width: 350px;
+    left: 50%;
+    transform: translateX(-50%);
+    right: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 400px) {
+  #toast-container {
+    min-width: 250px;
+  }
+  .toast {
+    width: 200px;
+    margin: 0 auto;
+  }
+}
+
+@keyframes slideDown {
+  0% {transform: translateY(-300%); opacity: 0;}		
+	100% {transform: translateY(0%); opacity: 1;}
+}
+
+@keyframes slideDownOut {
+	0% {transform: translateY(0%); opacity: 1;}
+	100% {transform: translateY(-300%); opacity: 0;}	
+}
+
+@keyframes toast {
+  from {opacity: 0;transform: translateY(2rem);}
+  to {opacity: 1;transform: translateY(0);}
+}
+
+@keyframes toastOut {
+  from {opacity: 1;transform: translateY(0);}
+  to {opacity: 0;transform: translateY(-2rem);}
+}
+
+@keyframes fadeOutScale {
+  from {opacity: 1; transform: translateX(0);}
+  to {opacity: 0; transform: translateX(100%);}
 }
